# ScanOMetrics

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: build_docs.sh
docs/source/: api.rst  conf.py  index.rst  scanometrics.GUI.Brain3D.rst  scanometrics.GUI.CheckBox.rst  scanometrics.GUI.DropDownMenu.rst  scanometrics.GUI.Figures.rst  scanometrics.GUI.Icon.rst  scanometrics.GUI.PathSelector.rst  scanometrics.GUI.PushButton.rst  scanometrics.GUI.ReportGenerator.rst  scanometrics.GUI.Thread.rst  scanometrics.GUI.rst  scanometrics.cross_validation.rst  scanometrics.processing.rst  scanometrics.rst  scanometrics.scripts.rst  scanometrics.utils.rst  setup.rst  tutorials.rst
docs/source/tutorials/: add_processing_module.rst  command_line.rst  dicom2bids.rst  evaluate_group.rst  evaluate_single_subject.rst  fit_normative_data.py  fit_normative_data.rst  gui.rst  loocv.py  loocv.rst  process_MRI_scans.rst
scanometrics/: README.md  __init__.py  core.py  normative_models.py
scanometrics/GUI/: MainWindow.py  styles.py
scanometrics/GUI/Brain3D/: Brain3D.py  Hemisphere.py  __init__.py
scanometrics/GUI/CheckBox/: CheckBox.py  MetricCheckBox.py  __init__.py
scanometrics/GUI/DropDownMenu/: DropDownMenu.py  SelectAcqlab.py  SelectPKLFile.py  SelectROI.py  SelectSes.py  SelectSub.py  __init__.py
scanometrics/GUI/Figures/: FigureWindow.py  SpiderPlot.py  __init__.py
scanometrics/GUI/Icon/: Icon.py  __init__.py
scanometrics/GUI/PathSelector/: PathSelector.py  __init__.py
scanometrics/GUI/PushButton/: PushButton.py  __init__.py
scanometrics/GUI/ReportGenerator/: ReportGenerator.py
scanometrics/GUI/Thread/: EvaluationThread.py  __init__.py
scanometrics/cross_validation/: __init__.py  loocv.py
scanometrics/processing/: __init__.py  dldirect.py  freesurfer.py  fsl.py  pipeline_template.py  quantifyBrainStructures.py
scanometrics/processing/resources/: DesikanKilliany_ROIs_select.txt  Destrieux_ROIs_select.txt
scanometrics/resources/html_template/: about.html  footer.html  header.html  report.html
scanometrics/resources/html_template/glossary/: index.html
scanometrics/resources/html_template/measurebased/: index.html  index.html~  parc35_area.html~  parc35_curvind.html~  parc35_foldind.html~  parc35_gauscurv.html~  parc35_meancurv.html~  parc35_pctmean.html~  (+16 more)
scanometrics/resources/normative_models/: Polynomial_dldirect_cleanOASIS3.pkl  Polynomial_freesurfer_cleanOASIS3.pkl
scanometrics/scripts/: scanometrics.py  scanometrics_gui.py
scanometrics/utils/: __init__.py  bids_util.py  dicom2bids.py  dicom2nifti.py  io.py  logging.py  misc.py  stats.py  zenodo_api.py
scripts/: scanometrics.py
tests/: test_curvature_normalization.py  test_lsq_polynomial_fit.py  test_python_package.py
(+212 files in other folders)
