[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scanometrics"
authors = [{name = "Christian Rummel", email = "christian.rummel@insel.ch"},
           {name = "David Romascano", email = "david.romascano@insel.ch"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: BSD 3-Clause License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
              ]
dependencies = [
    "numpy>=1.22.3",
    "nibabel>=3.2",
    "scipy>=1.8.1",
    "matplotlib>=3.5.2"
]
dynamic = ["version", "description"]

[project.scripts]
scanometrics = "scanometrics.scripts.scanometrics:main"
