[metadata]
name = scanometrics
version = attr: scanometrics.__version__
description = python package for personal brain scan analysis
long_description = file: scanometrics/README.md
long_description_content_type = text/markdown
url = https://github.com/SCAN-NRAD/ScanOMetrics
project_urls =
    Bug Tracker = https://github.com/SCAN-NRAD/ScanOMetrics/issues

[options]
package_dir=
    = scanometrics
packages = find:
install_requires =
    numpy>="1.22.3"
    nibabel>="3.2"
    scipy>="1.8.1"
    matplotlib>="3.5.2"
python_requires = >=3.9

[options.packages.find]
where = scanometrics
